compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unexpected_punned_arg.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn id(x) { x } fn y() { let x = 4 id(x:) }"
---
error: Unexpected labelled argument
  ┌─ /src/one/two.gleam:1:38
  │
1 │ fn id(x) { x } fn y() { let x = 4 id(x:) }
  │                                      ^^

This argument has been given a label but the constructor does
not expect any. Please remove the label `x`.
